{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 280,
  "lineage": "10c8bfdd-6e32-cca6-d71b-e6f6721d9467",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "role-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:200332535562:instance/i-090af47bae719dd96",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-090af47bae719dd96",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gagan1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3b4ff5ae5ccf476",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_ip": "10.0.1.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0461de4fff8b9c8c6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9c6e8ec1d94e19f",
            "tags": {
              "Name": "private-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-020c10b183a9823c4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_iam_role.test_role",
            "aws_subnet.subnet-private",
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:200332535562:instance/i-0fef076c1758334a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fef076c1758334a4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gagan1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e3c7e1d80a1cb12",
            "private_dns": "ip-10-0-0-80.ec2.internal",
            "private_ip": "10.0.0.80",
            "public_dns": "ec2-3-239-166-176.compute-1.amazonaws.com",
            "public_ip": "3.239.166.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0102966cca9dc30e6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a512fb3ff565110",
            "tags": {
              "Name": "nginx-web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-020c10b183a9823c4"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet-public",
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200332535562:internet-gateway/igw-026d5f8a382e9024e",
            "id": "igw-026d5f8a382e9024e",
            "owner_id": "200332535562",
            "vpc_id": "vpc-03728659c5ef506f6"
          },
          "dependencies": [
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cacc68bce0e58c7e",
            "owner_id": "200332535562",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026d5f8a382e9024e",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026d5f8a382e9024e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Challenge-rt-public"
            },
            "vpc_id": "vpc-03728659c5ef506f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f337cc46c60f39c",
            "route_table_id": "rtb-0cacc68bce0e58c7e",
            "subnet_id": "subnet-03a512fb3ff565110"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-table-public",
            "aws_subnet.subnet-public",
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200332535562:security-group/sg-00223c7090decbfd7",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00223c7090decbfd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "200332535562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03728659c5ef506f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200332535562:subnet/subnet-0f9c6e8ec1d94e19f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f9c6e8ec1d94e19f",
            "map_public_ip_on_launch": false,
            "owner_id": "200332535562",
            "tags": {
              "Name": "subnet-private"
            },
            "vpc_id": "vpc-03728659c5ef506f6"
          },
          "dependencies": [
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200332535562:subnet/subnet-03a512fb3ff565110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03a512fb3ff565110",
            "map_public_ip_on_launch": false,
            "owner_id": "200332535562",
            "tags": {
              "Name": "subnet-public"
            },
            "vpc_id": "vpc-03728659c5ef506f6"
          },
          "dependencies": [
            "aws_vpc.challenge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "challenge-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200332535562:vpc/vpc-03728659c5ef506f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb2583fc5d64d5ae",
            "default_route_table_id": "rtb-0178faa5bd707f889",
            "default_security_group_id": "sg-020c10b183a9823c4",
            "dhcp_options_id": "dopt-0155107b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03728659c5ef506f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0178faa5bd707f889",
            "owner_id": "200332535562",
            "tags": {
              "Name": "challenge-vpc"
            }
          }
        }
      ]
    }
  ]
}